--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "overlayscrollbars": "^2.2.1",
     "overlayscrollbars-react": "^0.5.0",
     "react": "^18.2.0",
+    "react-barcode": "^1.6.1",
     "react-bootstrap": "^2.7.4",
     "react-countup": "^6.4.2",
     "react-date-range": "^1.4.0",
