--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.30.0",
     "dropzone": "^6.0.0-beta.2",
     "font-awesome": "^4.7.0",
+    "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "overlayscrollbars": "^2.2.1",
