--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
