--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-datepicker": "^4.13.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-qr-code": "^2.0.18",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
