--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@tanstack/react-table": "^8.9.2",
     "@tanstack/table-core": "^8.9.2",
+    "@tinymce/tinymce-react": "^6.3.0",
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "date-fns": "^2.30.0",
@@ -30,6 +31,7 @@
     "jspdf-autotable": "^5.0.2",
     "overlayscrollbars": "^2.2.1",
     "overlayscrollbars-react": "^0.5.0",
+    "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-barcode": "^1.6.1",
     "react-bootstrap": "^2.7.4",
